[package]
name = "wafu"
version = "0.1.0"
authors = ["Alex Guerra <alex@heyimalex.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
# Hard-coded wasm-bindgen version bc: https://github.com/rustwasm/book/issues/148#issuecomment-463809784
wasm-bindgen = { version = "=0.2.34", features = ["serde-serialize"] }
serde = "^1.0.59"
serde_derive = "^1.0.59"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
